--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palakoderu Household Survey • Beautiful Dashboard</title>
+    <title>Palakoderu Household Survey • Premium Dashboard</title>
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
 
-    <!-- DataTables -->
+    <!-- DataTables with custom styling -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css" />
 
     <!-- Google Fonts -->
@@ -26,15 +26,15 @@
             color: #e0e0e0;
             min-height: 100vh;
             margin: 0;
-            padding-bottom: 50px;
+            padding-bottom: 80px;
         }
         .header-gradient {
             background: linear-gradient(120deg, #00b4db, #0083b0);
-            padding: 60px 20px;
+            padding: 70px 20px;
             text-align: center;
-            border-radius: 0 0 30px 30px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.4);
-            animation: gradientShift 15s ease infinite;
+            border-radius: 0 0 40px 40px;
+            box-shadow: 0 15px 40px rgba(0,0,0,0.5);
+            animation: gradientShift 18s ease infinite;
             background-size: 400% 400%;
         }
         @keyframes gradientShift {
@@ -42,53 +42,104 @@
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
-        h1 { font-weight: 700; color: white; text-shadow: 0 4px 10px rgba(0,0,0,0.3); }
-        .subtitle { font-size: 1.2rem; color: rgba(255,255,255,0.9); margin-top: 10px; }
+        h1 { font-weight: 700; color: white; text-shadow: 0 5px 15px rgba(0,0,0,0.4); font-size: 2.8rem; }
+        .subtitle { font-size: 1.3rem; color: rgba(255,255,255,0.95); }
 
         .stat-card {
-            background: rgba(255,255,255,0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            border: 1px solid rgba(255,255,255,0.2);
-            transition: all 0.4s ease;
+            background: rgba(255,255,255,0.12);
+            backdrop-filter: blur(12px);
+            border-radius: 22px;
+            border: 1px solid rgba(255,255,255,0.18);
+            transition: all 0.5s ease;
             overflow: hidden;
         }
         .stat-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+            transform: translateY(-12px) scale(1.03);
+            box-shadow: 0 25px 50px rgba(0,0,0,0.4);
         }
         .stat-number {
-            font-size: 3rem;
+            font-size: 3.2rem;
             font-weight: 700;
             color: white;
+            text-shadow: 0 4px 10px rgba(0,0,0,0.3);
         }
 
         #map {
-            height: 600px;
-            border-radius: 20px;
+            height: 620px;
+            border-radius: 24px;
             overflow: hidden;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.4);
+            box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+            border: 2px solid rgba(255,255,255,0.1);
         }
 
         .table-container {
             background: rgba(255,255,255,0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            padding: 30px;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.3);
+            backdrop-filter: blur(15px);
+            border-radius: 24px;
+            padding: 35px;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.4);
+            border: 1px solid rgba(255,255,255,0.15);
+            margin-top: 50px;
+        }
+
+        /* Beautiful DataTable Styling */
+        .dataTables_wrapper .dataTables_length select,
+        .dataTables_wrapper .dataTables_filter input {
+            background: rgba(255,255,255,0.15);
+            border: 1px solid rgba(255,255,255,0.3);
+            border-radius: 12px;
+            color: white;
+            padding: 8px 15px;
+        }
+        .dataTables_wrapper .dataTables_filter input::placeholder {
+            color: rgba(255,255,255,0.7);
+        }
+        table.dataTable {
+            color: #f0f0f0;
+        }
+        table.dataTable thead th {
+            background: rgba(0,0,0,0.3);
+            color: #00ffb8;
+            font-weight: 600;
+            text-transform: uppercase;
+            font-size: 0.9rem;
+            letter-spacing: 0.5px;
+        }
+        table.dataTable tbody tr {
+            background: rgba(255,255,255,0.05);
+            transition: all 0.3s ease;
+        }
+        table.dataTable tbody tr:hover {
+            background: rgba(0, 180, 219, 0.25) !important;
+            transform: scale(1.01);
+            box-shadow: 0 8px 20px rgba(0, 180, 219, 0.3);
+        }
+        .dataTables_wrapper .dataTables_paginate .paginate_button {
+            background: rgba(255,255,255,0.1) !important;
+            border: none !important;
+            color: white !important;
+            border-radius: 10px !important;
+            margin: 0 4px;
+        }
+        .dataTables_wrapper .dataTables_paginate .paginate_button.current {
+            background: #00b4db !important;
+            color: white !important;
         }
 
         .loading-spinner {
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.9);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             z-index: 9999;
         }
 
         .fade-in {
             opacity: 0;
-            animation: fadeIn 1s ease forwards;
+            animation: fadeIn 1.2s ease forwards;
         }
         @keyframes fadeIn {
             to { opacity: 1; }
@@ -97,38 +148,38 @@
 </head>
 <body>
 
-<div class="loading-spinner text-center text-white">
-    <div class="spinner-border" style="width: 4rem; height: 4rem;" role="status"></div>
-    <p class="mt-3 fs-4">Loading beautiful dashboard...</p>
+<div class="loading-spinner">
+    <div class="spinner-border text-info" style="width: 5rem; height: 5rem;" role="status"></div>
+    <p class="mt-4 fs-3 text-white">Crafting your beautiful dashboard...</p>
 </div>
 
 <div class="header-gradient">
     <h1>Palakoderu Household Survey</h1>
-    <p class="subtitle">West Godavari District • Andhra Pradesh</p>
+    <p class="subtitle">West Godavari District • Andhra Pradesh • Real-time Monitoring</p>
 </div>
 
 <div class="container my-5 fade-in">
-    <div class="row g-4 mb-5">
+    <div class="row g-5 mb-5">
         <div class="col-lg-3 col-md-6">
-            <div class="stat-card text-center p-4 text-primary">
+            <div class="stat-card text-center p-5 text-primary">
                 <div class="stat-number" id="total">0</div>
                 <p class="fs-5 mb-0">Total Households</p>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
-            <div class="stat-card text-center p-4 text-success">
+            <div class="stat-card text-center p-5 text-success">
                 <div class="stat-number" id="completed">0</div>
                 <p class="fs-5 mb-0">Surveys Completed</p>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
-            <div class="stat-card text-center p-4 text-warning">
+            <div class="stat-card text-center p-5 text-warning">
                 <div class="stat-number" id="notcompleted">0</div>
                 <p class="fs-5 mb-0">Not Completed</p>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
-            <div class="stat-card text-center p-4 text-info">
+            <div class="stat-card text-center p-5 text-info">
                 <div class="stat-number" id="withgps">0</div>
                 <p class="fs-5 mb-0">With GPS Location</p>
             </div>
@@ -137,23 +188,27 @@
 
     <div class="mb-5 fade-in">
         <div id="map"></div>
-        <div class="text-center mt-3 text-muted small">
-            🌍 Click clusters or markers to explore households • Green = Completed, Red = Not Completed
+        <div class="text-center mt-4 text-muted small">
+            🌍 Click clusters/markers • Green = Completed • Red = Not Completed • Coordinates shown in popup
         </div>
     </div>
 
     <div class="table-container fade-in">
-        <h3 class="text-center mb-4 text-white">Household Details Table</h3>
-        <table id="dataTable" class="table table-striped table-hover text-white">
-            <thead class="table-dark">
+        <h3 class="text-center mb-5 text-white" style="font-size: 2rem; font-weight: 600;">
+            Household Details Table
+        </h3>
+        <table id="dataTable" class="table table-striped table-hover">
+            <thead>
                 <tr>
                     <th>ID</th>
                     <th>Name</th>
                     <th>Address</th>
                     <th>Mobile</th>
                     <th>Age</th>
+                    <th>Latitude</th>
+                    <th>Longitude</th>
                     <th>Status</th>
-                    <th>Cluster</th>
+                    <th>Cluster ID</th>
                 </tr>
             </thead>
             <tbody></tbody>
@@ -183,26 +238,30 @@
         }).addTo(map);
 
         markerCluster = L.markerClusterGroup({
-            spiderfyOnMaxZoom: true,
-            showCoverageOnHover: false,
-            zoomToBoundsOnClick: true
+            maxClusterRadius: 50,
+            iconCreateFunction: function(cluster) {
+                return L.divIcon({
+                    html: `<div style="background:#00b4db;color:white;border-radius:50%;width:40px;height:40px;display:flex;align-items:center;justify-content:center;font-weight:bold;box-shadow:0 4px 15px rgba(0,0,0,0.4);">${cluster.getChildCount()}</div>`,
+                    className: '',
+                    iconSize: [40, 40]
+                });
+            }
         });
         map.addLayer(markerCluster);
     }
 
-    // Count-up animation for stats
     function animateCount(element, target) {
         let count = 0;
-        const increment = target / 50;
+        const increment = target / 60;
         const timer = setInterval(() => {
             count += increment;
             if (count >= target) {
-                element.textContent = target;
+                element.textContent = target.toLocaleString();
                 clearInterval(timer);
             } else {
-                element.textContent = Math.floor(count);
+                element.textContent = Math.floor(count).toLocaleString();
             }
-        }, 40);
+        }, 30);
     }
 
     $(document).ready(function() {
@@ -212,9 +271,9 @@
             download: true,
             header: true,
             complete: function(results) {
-                $('.loading-spinner').fadeOut(500);
+                $('.loading-spinner').fadeOut(800);
                 $('.fade-in').each(function(i) {
-                    $(this).delay(i * 300).queue(function() { $(this).addClass('animated'); $(this).dequeue(); });
+                    $(this).delay(i * 400).queue(function() { $(this).css('opacity', 1); $(this).dequeue(); });
                 });
 
                 const data = results.data.filter(row => row.HOUSEHOLDID);
@@ -228,15 +287,21 @@
                     return !isNaN(lat) && !isNaN(lon) && lat !== 0 && lon !== 0;
                 }).length;
 
-                // Animate stats
                 animateCount(document.getElementById('total'), total);
                 animateCount(document.getElementById('completed'), completed);
                 animateCount(document.getElementById('notcompleted'), notCompleted);
                 animateCount(document.getElementById('withgps'), withGps);
 
-                // Custom icons
-                const greenIcon = L.icon({ iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/images/marker-shadow.png', iconSize: [25,41], iconAnchor: [12,41] });
-                const redIcon = L.icon({ iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png', shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/images/marker-shadow.png', iconSize: [25,41], iconAnchor: [12,41] });
+                const greenIcon = L.icon({
+                    iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png',
+                    shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/images/marker-shadow.png',
+                    iconSize: [25,41], iconAnchor: [12,41]
+                });
+                const redIcon = L.icon({
+                    iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png',
+                    shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/images/marker-shadow.png',
+                    iconSize: [25,41], iconAnchor: [12,41]
+                });
 
                 data.forEach(row => {
                     const lat = parseFloat(row.HH_LATITUDE);
@@ -244,38 +309,55 @@
                     if (!isNaN(lat) && !isNaN(lon) && lat !== 0 && lon !== 0) {
                         const isCompleted = row.SURVEY_STATUS?.trim() === 'Completed';
                         const icon = isCompleted ? greenIcon : redIcon;
+
                         const popup = `
-                            <div style="font-family:Poppins; min-width:200px;">
+                            <div style="font-family:Poppins,sans-serif; min-width:240px; padding:8px;">
+                                <h6 style="color:#00b4db; margin-bottom:10px; text-align:center;">Household Details</h6>
                                 <b>Name:</b> ${row.CITIZEN_NAME || 'N/A'}<br>
                                 <b>Address:</b> ${row.ADDRESS || 'N/A'}<br>
                                 <b>Mobile:</b> ${row.MOBILE_NUMBER || 'N/A'}<br>
-                                <b>Age:</b> ${row.AGE_IN_YEARS || 'N/A'}<br>
+                                <b>Age:</b> \( {row.AGE_IN_YEARS || 'N/A'} ( \){row.AGE_FLAG || ''})<br>
+                                <hr style="border-color:rgba(255,255,255,0.2); margin:8px 0;">
+                                <b>📍 Coordinates:</b><br>
+                                <b>&nbsp;&nbsp;Latitude:</b> ${lat.toFixed(6)}<br>
+                                <b>&nbsp;&nbsp;Longitude:</b> ${lon.toFixed(6)}<br>
+                                <hr style="border-color:rgba(255,255,255,0.2); margin:8px 0;">
                                 <b style="color:${isCompleted ? '#28a745' : '#dc3545'}; font-weight:bold;">Status:</b> ${row.SURVEY_STATUS || 'N/A'}
                             </div>`;
+
                         L.marker([lat, lon], { icon }).bindPopup(popup).addTo(markerCluster);
                     }
                 });
 
-                if (withGps > 0) map.fitBounds(markerCluster.getBounds(), { padding: [50, 50] });
+                if (withGps > 0) map.fitBounds(markerCluster.getBounds(), { padding: [60, 60] });
 
+                // Beautiful DataTable with coordinates
                 $('#dataTable').DataTable({
                     data: data,
-                    pageLength: 15,
+                    pageLength: 20,
                     responsive: true,
+                    lengthMenu: [10, 20, 50, 100],
+                    order: [[0, 'asc']],
                     columns: [
                         { data: 'HOUSEHOLDID' },
                         { data: 'CITIZEN_NAME' },
                         { data: 'ADDRESS' },
                         { data: 'MOBILE_NUMBER' },
                         { data: 'AGE_IN_YEARS' },
-                        { data: 'SURVEY_STATUS' },
+                        { data: 'HH_LATITUDE', render: data => data ? parseFloat(data).toFixed(6) : 'N/A' },
+                        { data: 'HH_LONGITUDE', render: data => data ? parseFloat(data).toFixed(6) : 'N/A' },
+                        { data: 'SURVEY_STATUS', render: data => {
+                            if (!data) return '<span class="badge bg-secondary">Unknown</span>';
+                            return data.trim() === 'Completed' 
+                                ? '<span class="badge bg-success">Completed</span>'
+                                : '<span class="badge bg-danger">Not Completed</span>';
+                        }},
                         { data: 'CLUSTER_ID' }
-                    ],
-                    order: [[0, 'asc']]
+                    ]
                 });
             },
             error: function(err) {
-                $('.loading-spinner').html('<p class="text-danger fs-4">Failed to load data. Please check your internet or try refreshing.</p>');
+                $('.loading-spinner').html('<div class="text-center"><p class="text-danger fs-3">Failed to load data</p><p class="text-white">Check internet connection and refresh</p></div>');
                 console.error(err);
             }
         });
